Implement draw_cube()

--- a/game.html
+++ b/game.html
@@ -23,8 +23,8 @@ This is a simple zombie FPS game.
 	Below are vertical FOV, near, and far sliders, respectively.
 	</p>
 
-	<input id="fovy_slider" type="range" min="-180" max="180" step="1" value="70"/>
-	<input id="near_slider" type="range" min="-180" max="180" step="1" value="1"/>
-	<input id="far_slider" type="range" min="1" max="1000" step="1" value="1000"/>
+	<input id="fovy_slider" type="range" min="25" max="180" step="1" value="70"/>
+	<input id="near_slider" type="range" min="1" max="10" step=".1" value="1"/>
+	<input id="far_slider" type="range" min="1" max="100" step="1" value="75"/>
 </body>
 </html>
