--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@ This is a simple zombie FPS game.
 <head>
 	<title>Zombies</title>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
+	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="graphics.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 <head>
@@ -24,7 +25,7 @@ This is a simple zombie FPS game.
 	</p>
 
 	<input id="fovy_slider" type="range" min="25" max="180" step="1" value="70"/>
-	<input id="near_slider" type="range" min="1" max="10" step=".1" value="1"/>
-	<input id="far_slider" type="range" min="1" max="100" step="1" value="75"/>
+	<input id="near_slider" type="range" min="1" max="10" step=".05" value="1"/>
+	<input id="far_slider" type="range" min="1" max="100" step=".05" value="75"/>
 </body>
 </html>
