--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@ This is a simple zombie FPS game.
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
 	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="graphics.js"></script>
+	<script type="text/javascript" src="physics.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 <head>
 
