--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@ This is a simple zombie FPS game.
 	<script type="text/javascript" src="common.js"></script>
 	<script type="text/javascript" src="graphics.js"></script>
 	<script type="text/javascript" src="physics.js"></script>
+	<script type="text/javascript" src="zombies.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 <head>
 
