--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@ This is a simple zombie FPS game.
 	<script type="text/javascript" src="graphics.js"></script>
 	<script type="text/javascript" src="physics.js"></script>
 	<script type="text/javascript" src="zombies.js"></script>
+	<script type="text/javascript" src="textures.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 <head>
 
