Add Blinn-Phong shading

--- a/game.html
+++ b/game.html
@@ -23,10 +23,11 @@ This is a simple zombie FPS game.
 		<canvas id="webglcanvas" width="1000" height="500"></canvas>
 	</div>
 
-	<p style="font-family:monospace">
+	<p style="font-family:monospace; width:80em">
 	<b>Controls</b><br>
 	WASD - move<br>
 	V - toggle camera mode<br>
+	L - toggle lighting<br>
 	Shift - descend (fly mode only)<br>
 	Space - ascend (fly mode only)<br><br>
 
