Improve controls and zombie hitboxes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ This is a simple zombie FPS game.
 	WASD - move<br>
 	V - toggle camera mode<br>
 	L - toggle lighting<br>
-	Shift - descend (fly mode only)<br>
-	Space - ascend (fly mode only)<br><br>
+	P - pause/unpause zombies<br>
+	Q - ascend (fly mode only)<br>
+	E - descend (fly mode only)<br><br>
 
 	Below are vertical FOV, near, and far sliders, respectively.
 	</p>
